--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </div>        
 
                     <ul class="navbar">
-                        <li><a href="./INDEX.HTML">Categorías</a></li>
+                        <li><a href="./index.html">Categorías</a></li>
                         <li><a href="./PAGES/Nosotros.html">Nosotros</a></li>
                         <li><a href="./PAGES/Preguntas frecuentes.html">Preguntas frecuentes</a></li>
                         <li><a href="./PAGES/Contáctanos.html">Contáctanos</a></li>
