--- a/PAGES/Contáctanos.html
+++ b/PAGES/Contáctanos.html
@@ -21,7 +21,7 @@
             
                 <nav class="responsive">
                     <ul class="responsive">
-                        <li><a href="../INDEX.HTML">Categorias</a></li>
+                        <li><a href="../index.HTML">Categorias</a></li>
                         <li><a href="./Nosotros.html">Nosotros</a></li>
                         <li><a href="./Preguntas frecuentes.html">Preguntas frecuentes</a></li>
                         <li><a href="./Contáctanos.html">Contactanos</a></li>
