--- a/PAGES/Juguetes.html
+++ b/PAGES/Juguetes.html
@@ -24,7 +24,7 @@
                 </div>        
 
                     <ul class="navbar">
-                        <li><a href="../INDEX.HTML">Categorías</a></li>
+                        <li><a href="../index.HTML">Categorías</a></li>
                         <li><a href="./Nosotros.html">Nosotros</a></li>
                         <li><a href="./Preguntas frecuentes.html">Preguntas frecuentes</a></li>
                         <li><a href="./Contáctanos.html">Contáctanos</a></li>
